<resources>
    <string name="app_name">Calculator</string>
    <string name="neg">Neg</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="operation_plus">+</string>
    <string name="operation_minus">-</string>
    <string name="operation_times">*</string>
    <string name="operation_divide">/</string>
    <string name="operation_dot">.</string>
    <string name="operation_equal">=</string>
</resources>
